--- a/Sources/PackageCollectionsSigning/CMakeLists.txt
+++ b/Sources/PackageCollectionsSigning/CMakeLists.txt
@@ -8,10 +8,18 @@
 
 add_library(PackageCollectionsSigning
   Certificate/Certificate.swift
+  Certificate/CertificatePolicy.swift
   Key/BoringSSLKey.swift
   Key/Key.swift
   Key/Key+EC.swift
   Key/Key+RSA.swift
+  PackageCollectionsSigning.swift
+  Signing/BoringSSLSigning.swift
+  Signing/Signature.swift
+  Signing/Signing.swift
+  Signing+ECKey.swift
+  Signing+RSAKey.swift
+  Utilities/Base64URL.swift
   Utilities/Utilities.swift)
 #target_link_libraries(PackageCollectionsSigning PUBLIC
 #)
