Package registry TOFU
Motivation:
Provide trust-on-first-use (TOFU) security model for package dependencies downloaded from registries, where SwiftPM records locally a source archive's checksum and ensures it remains the change in subsequent downloads.

Modifications:
- Add `ChecksumStorage` protocol that defines APIs for reading and writing checksums.
- `FileChecksumStorage` is a file-based storage. Checksums are grouped by package. Each package has a dedicated file.
- Update `RegistryManager` to read/write checksums as well as performing integrity check. Once saved to storage, the checksum must remain the same or else an error gets thrown.
- Add and update tests.

rdar://85085494

--- a/Sources/PackageRegistry/CMakeLists.txt
+++ b/Sources/PackageRegistry/CMakeLists.txt
@@ -7,10 +7,13 @@
 # See http://swift.org/CONTRIBUTORS.txt for Swift project authors
 
 add_library(PackageRegistry
+  Checksum/ChecksumStorage.swift
+  Checksum/FileChecksumStorage.swift
   Registry.swift
   RegistryConfiguration.swift
   RegistryManager.swift
-  SourceArchiver.swift)
+  SourceArchiver.swift
+  Utility.swift)
 target_link_libraries(PackageRegistry PUBLIC
   Basics
   PackageLoading
