--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -1,6 +1,6 @@
 # This source file is part of the Swift.org open source project
 #
-# Copyright (c) 2014 - 2021 Apple Inc. and the Swift project authors
+# Copyright (c) 2014 - 2022 Apple Inc. and the Swift project authors
 # Licensed under Apache License v2.0 with Runtime Library Exception
 #
 # See http://swift.org/LICENSE.txt for license information
@@ -13,7 +13,9 @@ add_subdirectory(LLBuildManifest)
 add_subdirectory(PackageCollections)
 add_subdirectory(PackageCollectionsModel)
 add_subdirectory(PackageCollectionsSigning)
-add_subdirectory(PackageCollectionsSigningLibc)
+if(NOT CMAKE_SYSTEM_NAME STREQUAL Darwin)
+  add_subdirectory(PackageCollectionsSigningLibc)
+endif()
 add_subdirectory(PackageDescription)
 add_subdirectory(PackageFingerprint)
 add_subdirectory(PackageGraph)
