--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -1,6 +1,6 @@
 # This source file is part of the Swift open source project
 #
-# Copyright (c) 2014 - 2021 Apple Inc. and the Swift project authors
+# Copyright (c) 2014 - 2022 Apple Inc. and the Swift project authors
 # Licensed under Apache License v2.0 with Runtime Library Exception
 #
 # See http://swift.org/LICENSE.txt for license information
@@ -14,7 +14,6 @@ add_subdirectory(LLBuildManifest)
 add_subdirectory(PackageCollections)
 add_subdirectory(PackageCollectionsModel)
 add_subdirectory(PackageCollectionsSigning)
-add_subdirectory(PackageCollectionsSigningLibc)
 add_subdirectory(PackageDescription)
 add_subdirectory(PackageFingerprint)
 add_subdirectory(PackageGraph)
@@ -22,6 +21,7 @@ add_subdirectory(PackageLoading)
 add_subdirectory(PackageModel)
 add_subdirectory(PackagePlugin)
 add_subdirectory(PackageRegistry)
+add_subdirectory(SigningLibc)
 add_subdirectory(SPMBuildCore)
 add_subdirectory(SPMLLBuild)
 add_subdirectory(SourceControl)
