Add Signing module
Refactor code from PackageCollectionsSigning to it

--- a/Sources/PackageCollections/CMakeLists.txt
+++ b/Sources/PackageCollections/CMakeLists.txt
@@ -41,6 +41,7 @@ target_link_libraries(PackageCollections PUBLIC
   PackageCollectionsModel
   PackageCollectionsSigning
   PackageModel
+  Signing
   SourceControl)
 # NOTE(compnerd) workaround for CMake not setting up include flags yet
 set_target_properties(PackageCollections PROPERTIES
