--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -1,6 +1,6 @@
 # This source file is part of the Swift open source project
 #
-# Copyright (c) 2014 - 2022 Apple Inc. and the Swift project authors
+# Copyright (c) 2014-2022 Apple Inc. and the Swift project authors
 # Licensed under Apache License v2.0 with Runtime Library Exception
 #
 # See http://swift.org/LICENSE.txt for license information
@@ -21,6 +21,7 @@ add_subdirectory(PackageLoading)
 add_subdirectory(PackageModel)
 add_subdirectory(PackagePlugin)
 add_subdirectory(PackageRegistry)
+add_subdirectory(Signing)
 add_subdirectory(SigningLibc)
 add_subdirectory(SPMBuildCore)
 add_subdirectory(SPMLLBuild)
